--- a/index.html
+++ b/index.html
@@ -916,6 +916,26 @@
       <li>📊 Behavioral Insights</li>
     </ul>
   </section>
+  <section class="section">
+  <h2>Why Join the Waitlist?</h2>
+  <ul>
+    <li>✅ Be the first to try TimeBlend before the public launch</li>
+    <li>✅ Help shape the features with your feedback</li>
+    <li>✅ Get exclusive beta-only tools and early adopter perks</li>
+  </ul>
+</section>
+<section class="section alt">
+  <h2>What People Are Saying</h2>
+  <blockquote>
+    “TimeBlend changed how I plan my day. I finally work when I’m actually focused, not just busy.”
+    <footer>— Alex, Freelancer</footer>
+  </blockquote>
+  <blockquote>
+    “The AI suggestions saved me hours every week. It just makes sense.”
+    <footer>— Priya, Startup Founder</footer>
+  </blockquote>
+</section>
+
 
   <footer class="footer">
     <p>Start planning better days with TimeBlend.</p>
