--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <nav class="navbar">
+  <div class="nav-logo">
+    <img src="logo.png" alt="TimeBlend Logo" />
+    <span>TimeBlend</span>
+  </div>
+  <ul class="nav-menu">
+    <li><a href="#features">Features</a></li>
+    <li><a href="#waitlist">Waitlist</a></li>
+    <li><a href="#testimonials">Testimonials</a></li>
+  </ul>
+</nav>
+
   <header class="hero">
     <h1>Smarter Time Management Powered by AI and You</h1>
     <p class="subhead">TimeBlend helps you align your tasks with your energy, goals, and lifestyle — effortlessly.</p>
