--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
     </ul>
   </section>
 
-  <section class="section alt">
+  <section class="section alt" id="features">
     <h2>Meet TimeBlend</h2>
     <p>An AI-enhanced platform that optimizes your time based on your real-life patterns, energy, and goals.</p>
     <ul class="features">
@@ -928,7 +928,7 @@
       <li>📊 Behavioral Insights</li>
     </ul>
   </section>
-  <section class="section">
+  <section class="section" id="waitlist">
   <h2>Why Join the Waitlist?</h2>
   <ul>
     <li>✅ Be the first to try TimeBlend before the public launch</li>
@@ -936,7 +936,7 @@
     <li>✅ Get exclusive beta-only tools and early adopter perks</li>
   </ul>
 </section>
-<section class="section alt">
+<section class="section alt" id="testimonials">
   <h2>What People Are Saying</h2>
   <blockquote>
     “TimeBlend changed how I plan my day. I finally work when I’m actually focused, not just busy.”
