--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
     <img src="logo.png" alt="TimeBlend Logo" />
     <span>TimeBlend</span>
   </div>
-  <ul class="nav-menu">
+
+  <div class="nav-toggle" id="nav-toggle">
+    ☰
+  </div>
+
+  <ul class="nav-menu" id="nav-menu">
     <li><a href="#features">Features</a></li>
     <li><a href="#waitlist">Waitlist</a></li>
     <li><a href="#testimonials">Testimonials</a></li>
   </ul>
 </nav>
+
 
   <header class="hero">
     <h1>Smarter Time Management Powered by AI and You</h1>
