--- a/index.html
+++ b/index.html
@@ -962,5 +962,6 @@
       <button type="submit">Join the Waitlist</button>
     </form>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
