--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar">
   <div class="nav-logo">
-    <img src="logo.png" alt="TimeBlend Logo" />
+    <img src="Timeblend__1_-removebg-preview.png" alt="TimeBlend Logo" />
     <span>TimeBlend</span>
   </div>
 
