--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <nav class="navbar">
   <div class="nav-logo">
     <img src="Timeblend__1_-removebg-preview.png" alt="TimeBlend Logo" class="logo" />
+    <span>TimeBlend</span>
   </div>
 
   <div class="nav-toggle" id="nav-toggle">
